--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 		<div>
 			<ul>
 				<li>bricks</li>
-				<li>mortar</li>		
-				<li>sand</li>						
+				<li>quickcrete</li>							
 			</ul>
 		</div>	
 	</body>
